# personal-app-template

./: LICENSE  README.md  cookiecutter.json  pyproject.toml  tests.py
hooks/: post_gen_project.sh
{{ cookiecutter.project_slug }}/: Dockerfile  Justfile  docker-entrypoint.sh  fly.toml  manage.py  pyproject.toml  tailwind.config.js
{{ cookiecutter.project_slug }}/config/: asgi.py  middleware.py  settings.py  urls.py
{{ cookiecutter.project_slug }}/templates/: base.html  index.html
